# CPUPC

./: .gitignore  DEVELOPMENT.md  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
cpupc/allocation/: allocation.py
cpupc/die/: die.py  yaml_parse_die.py
cpupc/geometry/: fpolygon.py  geometry.py  hanan.py  strop.py
cpupc/netlist/: module.py  netlist.py  netlist_types.py  yaml_read_netlist.py  yaml_write_netlist.py
cpupc/utils/: keywords.py  utils.py
doc/: DIEF.md  FPEF.md  STROP.md
doc/pict/: Floorplan_picts.pptx  TCAD-Paper-Figs.pptx
experiments/: README.md
experiments/TCAD2026/: README.md
frame/geometry/: strop.py
outputs/: README.md
tests/floorset/: netlist.yml  test_floorset.py
tests/floorset_parser/: test_floorset_parser.py
tests/hello/: test_hello.py
tests/legalrect/: test_legalizer_unit.py
tools/: cpupc_tools.py  frame_tools.py
tools/all/: README.md  all.py
tools/draw/: README.md  draw.py
tools/fastpswap/: README.md  anneal.py  anneal_cached.py  fastpswap.py  netlist.py
tools/floor_designer/: centralwidgets.py  floor_designer.py  graphical_view.py  items.py  mainwindow.py
tools/floorset/: fsconst.py  names.py  readfloorset.py  readnetlist.py  utils.py  validate.py  validnetlist.py  writefloorset.py  writenetlist.py
tools/floorset_parser/: README.md  floorset_handler.py
tools/hello/: hello.py
tools/inipoints/: inipoints.py  qp.py
tools/inirects/: contraction.py  expansion.py  inirects.py  pseudo_solver.py  readme.md  repel_rectangles.py
tools/legalrect/: README.md  (+4 more)
(+123 files in other folders)
