[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cpupc"
version = "0.1"
description = "Chip Planning at UPC"
readme = "README.md"
license = { file = "LICENSE.txt" }
dependencies = [
    "pyyaml",
    "gekko",
    "casadi",
    "numpy",
    "matplotlib",
    "distinctipy",
    "Pillow",
    "python-sat",
    "ortools",
    "rportion",
    "torch",
    "PySide6",
    "numba",
    "networkx"
]

[project.optional-dependencies]
mypy = [
    "mypy",
    "types-Pillow",
    "types-setuptools"
]

jupyter = [
    "jupyterlab",
    "ipycanvas"
]

[project.urls]
homepage = "https://github.com/jordicf/CPUPC"

[project.scripts]
cpupc = "tools.cpupc_tools:main"

[tool.setuptools]
packages = [
    "cpupc",
    "cpupc.allocation",
    "cpupc.die",
    "cpupc.geometry",
    "cpupc.netlist",
    "cpupc.utils",
    "tools",
    "tools.draw",
    "tools.hello",
    "tools.legalrect",
    "tools.floorset_parser",
    "tools.fastpswap",
    "tools.inipoints",
    "tools.inirects",
    "tools.all"
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = "numpy.typing.mypy_plugin"
